# src/docs/openapi.yaml
@@ -40,8 +40,8 @@ paths:
         - Municipalities
       summary: Crear municipalidad
       description: Crea una nueva municipalidad en la base de datos
-      security:
-        - bearerAuth: []
+      # security:
+      #   - bearerAuth: []
       requestBody:
         content:
           multipart/form-data:
