# src/routes/municipality.routes.ts
@@ -6,6 +6,7 @@ import {
   authorizeRoles,
   validateData,
   upload,
+  parseMultipartFormData,
 } from "../middlewares";
 import {
   createMunicipalityValidation,
@@ -22,10 +23,11 @@ router.get("/email/:email", MunicipalityController.getMunicipalityByEmail);
 
 router.post(
   "/",
-  authenticateToken,
-  authorizeRoles(["admin"]),
-  validateData(createMunicipalityValidation),
+  // authenticateToken,
+  // authorizeRoles(["admin"]),
   upload.single("file"),
+  parseMultipartFormData,
+  validateData(createMunicipalityValidation),
   MunicipalityController.createMunicipality,
 );
 
